<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="de.grohmann.nico.localweather.MainActivity"
    tools:showIn="@layout/activity_main">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_city"
        android:id="@+id/currentCityTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="#19cf3d"
        android:textSize="@dimen/abc_text_size_display_2_material" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_city"
        android:id="@+id/currentCity"
        android:textColor="#720a0a"
        android:textSize="@dimen/design_navigation_icon_size"
        android:layout_below="@+id/currentCityTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:background="#dde816" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/myLocationImage"
        android:src="@drawable/arrow"
        android:layout_alignTop="@+id/currentCity"
        android:layout_alignBottom="@+id/currentCity"
        android:layout_alignEnd="@+id/temperatureView"
        android:layout_toEndOf="@+id/pressureView" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/myLocationImage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weatherdata"
        android:id="@+id/weatherDataView"
        android:textStyle="bold"
        android:textColor="#19cf3d"
        android:textSize="@dimen/abc_text_size_display_2_material"
        android:layout_below="@+id/myLocationImage"
        android:layout_marginTop="33dp"
        android:layout_toEndOf="@+id/myLocationImage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/temperature"
        android:id="@+id/temperatureView"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/humidity"
        android:id="@+id/humidityView"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/temperatureView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/wind"
        android:id="@+id/windView"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/humidityView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pressure"
        android:id="@+id/pressureView"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/windView"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/wetter_symbol"
        android:layout_alignBottom="@+id/weatherDataView"
        android:layout_alignTop="@+id/weatherDataView"
        android:layout_toStartOf="@+id/weatherDataView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/temperature"
        android:id="@+id/temperatureValue"
        android:layout_alignTop="@+id/imageView"
        android:layout_alignEnd="@+id/currentCity"
        android:background="#d7d1d1"
        android:textColor="#f00b0b" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/humidity"
        android:id="@+id/humidityValue"
        android:layout_above="@+id/windView"
        android:layout_alignStart="@+id/temperatureValue"
        android:background="#d7d1d1"
        android:textColor="#f00b0b" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/wind"
        android:id="@+id/windValue"
        android:layout_above="@+id/pressureView"
        android:layout_alignStart="@+id/humidityValue"
        android:background="#d7d1d1"
        android:textColor="#f00b0b" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pressure"
        android:id="@+id/pressureValue"
        android:layout_alignTop="@+id/pressureView"
        android:layout_alignStart="@+id/windValue"
        android:background="#d7d1d1"
        android:textColor="#f00b0b" />

    <Space
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_below="@+id/weatherDataView"
        android:layout_alignStart="@+id/currentCityTextView" />

</RelativeLayout>
